[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Login/Login.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Cave-Story.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/greenery.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/button-normal.png-3f53210e640512f93b070c8f9e6bd389.stex"

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/arrow_wood_left.png-d26b75d347a358e75b7cfb7949c75afa.stex"

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Fonts/Candy Beans.otf"

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 70
outline_size = 15
outline_color = Color( 0.666667, 0.376471, 0.156863, 1 )
font_data = ExtResource( 2 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.16632
margin_top = -1.51617
margin_right = -4.16632
margin_bottom = -1.51611
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -6.0
margin_top = 174.0
margin_right = 620.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 1 )
text = "Login Page"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 202.769
margin_top = 439.612
margin_right = 593.769
margin_bottom = 614.612

[node name="Username" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 391.0
margin_bottom = 34.0
custom_constants/separation = 63

[node name="Label" type="Label" parent="VBoxContainer/Username"]
margin_right = 62.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Email:"
align = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Username"]
margin_left = 125.0
margin_right = 225.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 3 )

[node name="Password" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 391.0
margin_bottom = 72.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/Password"]
margin_right = 109.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Password"]
margin_left = 125.0
margin_right = 225.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 5 )
secret = true

[node name="Domain" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 391.0
margin_bottom = 110.0
custom_constants/separation = 41

[node name="Label" type="Label" parent="VBoxContainer/Domain"]
margin_right = 84.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 6 )
text = "Domain:"

[node name="LineEdit" type="OptionButton" parent="VBoxContainer/Domain"]
margin_left = 125.0
margin_right = 242.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 7 )
text = "STUDENT"
items = [ "STUDENT", null, false, 0, null, "TEACHER", null, false, 1, null ]
selected = 0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="HTTPRequest4" type="HTTPRequest" parent="."]

[node name="HTTPRequest5" type="HTTPRequest" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -4.0
margin_top = 498.0
margin_right = 623.0
margin_bottom = 556.0
custom_constants/separation = 20
alignment = 1

[node name="Sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 381.412, 710.8 )
scale = Vector2( 0.721512, 1.32375 )
texture = ExtResource( 4 )

[node name="Notification" type="Label" parent="."]
margin_left = 36.153
margin_top = 583.791
margin_right = 658.153
margin_bottom = 650.791
custom_fonts/font = SubResource( 8 )
align = 1

[node name="LoginButton" type="TextureButton" parent="."]
margin_left = 199.998
margin_top = 686.628
margin_right = 449.998
margin_bottom = 776.628
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 9 )
expand = true

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 110.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 10 )
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( -494.138, 766.138 )
scale = Vector2( 1.19181, 1.43166 )
texture = ExtResource( 4 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="LoginLabel" type="Label" parent="CanvasLayer2"]
margin_left = 289.998
margin_top = 709.402
margin_right = 360.998
margin_bottom = 749.402
custom_fonts/font = SubResource( 12 )
text = "Login"

[node name="Sprite2" type="Sprite" parent="."]

[node name="Title" type="Label" parent="."]
margin_left = 22.4839
margin_top = 215.472
margin_right = 644.484
margin_bottom = 769.472
custom_fonts/font = SubResource( 13 )
text = "World Of 
Software"
align = 1
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_HTTPRequest3_request_completed"]
[connection signal="request_completed" from="HTTPRequest4" to="." method="_on_HTTPRequest4_request_completed"]
[connection signal="request_completed" from="HTTPRequest5" to="." method="_on_HTTPRequest5_request_completed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
